<resources>
    <string name="app_name">ConstructionCalculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="source">Source</string>
    <string name="saved">Saved</string>
    <string name="info">How to use</string>
    <string name="rate_us">Rate us</string>

    <string name="construction_forms">Construction forms</string>
    <string name="geometric_forms">Geometric forms</string>
    <string name="tab_mat_metals">Metals</string>
    <string name="tab_mat_wood">Wood</string>
    <string name="tab_mat_other">Other</string>

    //shapes
    <string name="angle">angle</string>
    <string name="beam">beam</string>
    <string name="channel">channel</string>
    <string name="flat_bar">flat_bar</string>
    <string name="hexag_bar">hexagonal_bar</string>
    <string name="hexag_hex">hexagonal_hex</string>
    <string name="hexag_tube">hexagonal_tube</string>
    <string name="pipe">pipe</string>
    <string name="roundBar">roundBar</string>
    <string name="square_bar">square_bar</string>
    <string name="square_tube">square_tubing</string>
    <string name="t_bar">t_bar</string>

    //materials
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="platinum">Platinum</string>
    <string name="copper">Copper</string>
    <string name="tin">Tin</string>
    <string name="cast_iron">Cast-iron</string>
    <string name="bronze">Bronze</string>
    <string name="aluminium">Aluminium</string>
    <string name="brass">Brass</string>
    <string name="chrome">Chrome</string>

    <string name="density">density</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="thickness">Thickness</string>
    <string name="side">Side</string>
    <string name="weight">Weight</string>
    <string name="volume">Volume</string>
    <string name="price">Price</string>

    //units
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="LENGTH">Length</string>
    <string name="WEIGHT">Weight</string>
    <string name="WIDTH">Width</string>
    <string name="HEIGHT">Height</string>
    <string name="THICKNESS">Thickness</string>
    <string name="THICKNESS_1">Thickness 1</string>
    <string name="THICKNESS_2">Thickness 2</string>
    <string name="DIAMETER">Diameter</string>
    <string name="SIDE">Side</string>
    <string name="COUNT">Count</string>
    <string name="VOLUME">Volume</string>

    <string name="invalid_null">Parameter is required!</string>
    <string name="invalid_0">0.0 is invalid input!</string>
    <string name="invalid_other">wrong input....</string>
</resources>