<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_source"
            android:icon="@drawable/ic_source"
            android:title="@string/source" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_saved"
            android:title="@string/saved" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_help"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate_us" />
    </group>
</menu>